# tragent

./: .gitignore  risk_assessment_output.txt
trading_crew/: README.md  pyproject.toml
trading_crew/src/trading_crew/: crew.py  main.py  state.py
trading_crew/src/trading_crew/config/: agents.yaml  tasks.yaml
trading_crew/src/trading_crew/knowledge/: trading_strategy.py
trading_crew/src/trading_crew/tools/: alpaca_market_tool.py
