[project]
name = "trading_crew"
version = "0.1.0"
description = "trading-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
trading_crew = "trading_crew.main:run"
run_crew = "trading_crew.main:run"
train = "trading_crew.main:train"
replay = "trading_crew.main:replay"
test = "trading_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
